--- a/src/main/resources/templates/member/sign-up.html
+++ b/src/main/resources/templates/member/sign-up.html
@@ -10,8 +10,16 @@
         <form class="needs-validation" th:object="${member}" action="/sign-up" method="POST">
             <div class="row g-3">
                 <div class="col-12">
-                    <label for="userId" class="form-label">아이디</label>
-                    <input type="text" class="form-control" id="userId" th:field="*{loginId}" th:errorclass="field-error" placeholder="" value="">
+                    <label for="loginId" class="form-label">아이디</label>
+                    <div class="row">
+                        <div class="col-8">
+                            <input type="text" class="form-control" id="loginId" th:field="*{loginId}" th:errorclass="field-error" placeholder="" value="">
+                        </div>
+                        <div class="col-4">
+                            <input type="button" class="btn btn-success" id="id-duplicate-check" onclick="idDuplicateCheck()" value="중복 체크">
+                        </div>
+                    </div>
+
                     <small class="text-body-warning field-error" th:errors="*{loginId}">Id error</small>
                 </div>
                 <div class="col-12">
@@ -47,8 +55,7 @@
                             <small class="field-error" th:errors="*{address}">address error</small>
                         </div>
                         <div class="col-2">
-                            <label for="find-address-button" class="form-label">   </label>
-                            <input type="button" class="btn btn-success" id="find-address-button" onclick="findAddress()" value="검색">
+                            <input type="button" class="btn btn-success" id="find-address-button" onclick="member()" value="검색">
                         </div>
                     </div>
                 </div>
@@ -64,7 +71,7 @@
                 </div>
                 <div class="col-12">
                     <label for="birthday" class="form-label">생일</label>
-                    <input type="text" class="form-control" id="birthday" th:errorclass="field-error" th:field="*{birthday}" placeholder="">
+                    <input type="date" class="form-control" id="birthday" th:errorclass="field-error" th:field="*{birthday}" placeholder="">
                     <small class="field-error" th:errors="*{birthday}">birthday error</small>
                 </div>
             </div>
@@ -76,7 +83,7 @@
 
 <div th:replace="~{/fragments/footer :: footer}"></div>
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-<script src="/js/find-address.js"></script>
+<script src="/js/member.js"></script>
 
 </body>
 </html>
