--- a/src/main/resources/templates/member/sign-up.html
+++ b/src/main/resources/templates/member/sign-up.html
@@ -12,15 +12,16 @@
                 <div class="col-12">
                     <label for="loginId" class="form-label">아이디</label>
                     <div class="row">
-                        <div class="col-8">
+                        <div class="col-9">
                             <input type="text" class="form-control" id="loginId" th:field="*{loginId}" th:errorclass="field-error" placeholder="" value="">
+                            <small class="text-body-warning field-error" th:errors="*{loginId}">Id error</small>
+                            <small class="text-body-warning field-error" id="loginId-error" style="display: none"></small>
+                            <small id="loginId-ok" style="display: none; color: blue;">사용 가능한 아이디 입니다.</small>
                         </div>
-                        <div class="col-4">
-                            <input type="button" class="btn btn-success" id="id-duplicate-check" onclick="idDuplicateCheck()" value="중복 체크">
+                        <div class="col-3">
+                            <input type="button" class="w-100 btn btn-success" onclick="idDuplicateCheck()" value="중복 체크">
                         </div>
                     </div>
-
-                    <small class="text-body-warning field-error" th:errors="*{loginId}">Id error</small>
                 </div>
                 <div class="col-12">
                     <label for="password" class="form-label">비밀번호</label>
@@ -55,7 +56,7 @@
                             <small class="field-error" th:errors="*{address}">address error</small>
                         </div>
                         <div class="col-2">
-                            <input type="button" class="btn btn-success" id="find-address-button" onclick="member()" value="검색">
+                            <input type="button" class="w-100 btn btn-success" id="find-address-button" onclick="member()" value="검색">
                         </div>
                     </div>
                 </div>
