--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -5,6 +5,7 @@
         <div class="col-md-3">
             <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
                 <img width="auto" height="50" src="/img/clean-logo.png">
+                <p>Delivery Market</p>
             </a>
         </div>
 
@@ -35,7 +36,7 @@
             th:text="${#authentication.principal.username} + 님">
             </a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/member/info/modify">개인정보 수정</a></li>
+                <li><a class="dropdown-item" href="/my-page">개인정보 수정</a></li>
             </ul>
             <a href="/logout" class="btn btn-outline-primary me-2">로그아웃</a>
         </div>
