--- a/src/main/resources/templates/fragments/lnb.html
+++ b/src/main/resources/templates/fragments/lnb.html
@@ -33,8 +33,8 @@
     <div class="card mb-3 p-1">
         <div class="card-body border-bottom">
             <small class="mb-3" style="color: gray">내 정보관리</small>
-            <h5><a class="nav-link active mt-3 mb-3" aria-current="page" href="#">배송지 관리</a></h5>
-            <h5><a class="nav-link active mt-3 mb-3" aria-current="page" href="#">개인정보 수정</a></h5>
+            <h5><a class="nav-link active mt-3 mb-3" aria-current="page" href="/my-page/address">배송지 관리</a></h5>
+            <h5><a class="nav-link active mt-3 mb-3" aria-current="page" href="/my-page/info/modify">개인정보 수정</a></h5>
         </div>
         <div class="card-body border-bottom">
             <small class="mb-3" style="color: gray">내 정보관리</small>
