--- a/src/main/resources/templates/member/modify-info.html
+++ b/src/main/resources/templates/member/modify-info.html
@@ -8,30 +8,26 @@
         <div th:replace="~{/fragments/lnb :: lnb}"></div>
         <div class="col-5 offset-md-2">
             <h4 class="mb-3 text-center">Delivery Market 개인정보 수정</h4>
-            <form class="needs-validation" th:object="${member}" action="/sign-up" method="POST" id="sign-up-form">
+            <form class="needs-validation" th:object="${member}" action="/my-page/info/modify" method="POST" id="sign-up-form">
                 <div class="row g-3">
                     <div class="col-12">
                         <label for="loginId" class="form-label">아이디</label>
-                        <div class="row">
-                            <div class="col-9">
-                                <input type="text" class="form-control" id="loginId" th:field="*{loginId}" th:errorclass="field-error" placeholder="" value="">
-                                <small class="text-body-warning field-error" th:errors="*{loginId}">Id error</small>
-                                <small class="text-body-warning field-error" id="loginId-error" style="display: none"></small>
-                                <small id="loginId-ok" style="display: none; color: blue;">사용 가능한 아이디 입니다.</small>
-                            </div>
-                            <div class="col-3">
-                                <input type="button" class="w-100 btn btn-success" onclick="idDuplicateCheck()" value="중복 체크">
-                            </div>
-                        </div>
+                        <input type="text" class="form-control" id="loginId" th:field="*{loginId}" disabled>
+                        <input type="text" class="form-control" th:field="*{loginId}" hidden="hidden">
                     </div>
                     <div class="col-12">
-                        <label for="newPassword" class="form-label">비밀번호</label>
-                        <input type="password" class="form-control" id="newPassword" th:errorclass="field-error" th:field="*{newPassword}" placeholder="">
+                        <label for="password" class="form-label">비밀번호</label>
+                        <input type="password" class="form-control" id="password" th:errorclass="field-error" th:field="*{password}" placeholder="현재 비밀번호를 입력해주세요.">
+                        <small class="text-body-warning field-error" th:errors="*{password}">password error</small>
+                    </div>
+                    <div class="col-12">
+                        <label for="newPassword" class="form-label">새 비밀번호 </label>
+                        <input type="password" class="form-control" id="newPassword" th:errorclass="field-error" th:field="*{newPassword}" placeholder="새 비밀번호를 입력해주세요.">
                         <small class="text-body-warning field-error" th:errors="*{newPassword}">newPassword error</small>
                     </div>
                     <div class="col-12">
-                        <label for="newPasswordCheck" class="form-label">비밀번호 확인</label>
-                        <input type="password" class="form-control" id="newPasswordCheck" th:errorclass="field-error" th:field="*{newPasswordCheck}" placeholder="">
+                        <label for="newPasswordCheck" class="form-label">새 비밀번호 확인</label>
+                        <input type="password" class="form-control" id="newPasswordCheck" th:errorclass="field-error" th:field="*{newPasswordCheck}" placeholder="새 비밀번호를 다시 입력해주세요.">
                         <small class="field-error" th:errors="*{newPasswordCheck}">newPasswordCheck check error</small>
                     </div>
                     <div class="col-12">
@@ -39,31 +35,6 @@
                         <input type="text" class="form-control" id="name" th:errorclass="field-error" th:field="*{name}" placeholder="">
                         <small class="field-error" th:errors="*{name}">name error</small>
                     </div>
-
-
-                    <div class="col-12">
-                        <label for="email" class="form-label">이메일</label>
-                        <div class="row">
-                            <div class="col-9">
-                                <input type="text" class="form-control" id="email" th:errorclass="field-error" th:field="*{email}" placeholder="">
-                                <small class="field-error" th:errors="*{email}">email error</small>
-                            </div>
-                            <div class="col-3">
-                                <input type="button" class="w-100 btn btn-success" onclick="sendEmail()" value="이메일 인증">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <div class="row">
-                            <div class="col-9">
-                                <input type="text" class="form-control" id="auth-code" name="authCode" placeholder="인증 번호">
-                            </div>
-                            <div class="col-3">
-                                <input type="button" class="w-100 btn btn-success" onclick="checkAuthCode()" value="인증 확인">
-                            </div>
-                        </div>
-                    </div>
-
                     <div class="col-12">
                         <label for="phone" class="form-label">휴대전화</label>
                         <input type="text" class="form-control" id="phone" th:errorclass="field-error" th:field="*{phone}" placeholder="">
@@ -76,7 +47,7 @@
                         <small class="field-error" th:errors="*{birthday}">birthday error</small>
                     </div>
                     <div class="col-12">
-                        <input type="button" class="w-100 btn btn-success" id="sign-up" onclick="signUp()" value="회원가입">
+                        <button type="submit" class="w-100 btn btn-outline-primary me-2">개인정보 수정</button>
                     </div>
                 </div>
 
