--- a/delivery-market-admin/src/main/resources/templates/main.html
+++ b/delivery-market-admin/src/main/resources/templates/main.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Delivery Market Main</title>
-</head>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<div th:replace="~{/fragments/header :: header}"></div>
 <body>
+<div th:replace="~{/fragments/lnb :: lnb}"></div>
+<div class="container-fluid d-flex flex-column h-100">
+  <div class="row">
+    <div th:replace="~{/fragments/bodyHeader :: bodyHeader}"></div>
+
+    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+        <h1 class="h2 pt-3 pb-2 mb-3 border-bottom">Dashboard</h1>
+
+    </main>
+  </div>
+</div>
+
+
+
 
 </body>
+<div th:replace="~{/fragments/footer :: footer}"></div>
 </html>
