--- a/delivery-market-admin/src/main/resources/templates/main.html
+++ b/delivery-market-admin/src/main/resources/templates/main.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{/fragments/header :: header}"></div>
 <body>
-<div th:replace="~{/fragments/lnb :: lnb}"></div>
-<div class="container-fluid d-flex flex-column h-100">
-  <div class="row">
-    <div th:replace="~{/fragments/bodyHeader :: bodyHeader}"></div>
+    <div th:replace="~{/fragments/sidebar :: sidebar}"></div>
+<div class="content-area">
 
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-        <h1 class="h2 pt-3 pb-2 mb-3 border-bottom">Dashboard</h1>
-
-    </main>
-  </div>
 </div>
 
-
-
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
-<div th:replace="~{/fragments/footer :: footer}"></div>
 </html>
