docs: 프론트 레이아웃 수정

--- a/delivery-market/src/main/resources/templates/main.html
+++ b/delivery-market/src/main/resources/templates/main.html
@@ -2,13 +2,51 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{/fragments/header :: header}"></div>
 <body>
-<div th:replace="~{/fragments/bodyHeader :: bodyHeader}"></div>
+<div th:replace="~{/fragments/navbars :: navbars}"></div>
 
-<div class="container">
-    main
+<div class="content-area">
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
+    main<br>
 
 </div>
 
-<div th:replace="~{/fragments/footer :: footer}"></div>
 </body>
 </html>
