--- a/delivery-market/src/main/resources/templates/member/find-id.html
+++ b/delivery-market/src/main/resources/templates/member/find-id.html
@@ -2,49 +2,48 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{/fragments/header :: header}"></div>
 <body>
-<div th:replace="~{/fragments/bodyHeader :: bodyHeader}"></div>
+<div th:replace="~{/fragments/navbars :: navbars}"></div>
 
-<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
-    <div class="col-md-4 offset-lg-4">
-        <h4 class="mb-3 text-center">Delivery Market 아이디 찾기</h4>
-        <form class="needs-validation" th:object="${member}" action="/member/find/id" method="POST" id="find-id-form">
-            <div class="row g-3" id="find-id-area">
-                <div class="col-12">
-                    <label for="name" class="form-label">이름</label>
-                    <input type="text" class="form-control" id="name" th:errorclass="field-error" th:field="*{name}" placeholder="">
-                    <small class="field-error" th:errors="*{name}">name error</small>
+<div class="content-area">
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
+        <div class="col-md-4 offset-lg-4">
+            <h4 class="mb-3 text-center">Delivery Market 아이디 찾기</h4>
+            <form class="needs-validation" th:object="${member}" action="/member/find/id" method="POST" id="find-id-form">
+                <div class="row g-3" id="find-id-area">
+                    <div class="col-12">
+                        <label for="name" class="form-label">이름</label>
+                        <input type="text" class="form-control" id="name" th:errorclass="field-error" th:field="*{name}" placeholder="">
+                        <small class="field-error" th:errors="*{name}">name error</small>
+                    </div>
+                    <div class="col-12">
+                        <label for="email" class="form-label">이메일</label>
+                        <input type="text" class="form-control" id="email" th:errorclass="field-error" th:field="*{email}" placeholder="">
+                        <small class="field-error" th:errors="*{email}">email error</small>
+                    </div>
+                    <div class="col">
+                        <input type="button" class="w-100 btn btn-success" onclick="findId()" value="아이디 찾기">
+                    </div>
                 </div>
-                <div class="col-12">
-                    <label for="email" class="form-label">이메일</label>
-                    <input type="text" class="form-control" id="email" th:errorclass="field-error" th:field="*{email}" placeholder="">
-                    <small class="field-error" th:errors="*{email}">email error</small>
+                <div class="row g-3" id="find-id-result-area" style="display: none">
+                    <div class="col-12">
+                        <p>
+                            고객님의 계정을 찾았습니다.
+                        </p>
+                        <span>아이디 확인 후 로그인해 주세요.</span>
+                        <h3 id="find-id"></h3>
+                    </div>
+                    <div class="col">
+                        <a type="button" class="w-100 btn btn-success" href="/member/find/password">비밀번호 찾기</a>
+                    </div>
+                    <div class="col">
+                        <a type="button" class="w-100 btn btn-success" href="/login">로그인 하러가기</a>
+                    </div>
                 </div>
-                <div class="col">
-                    <input type="button" class="w-100 btn btn-success" onclick="findId()" value="아이디 찾기">
-                </div>
-            </div>
-            <div class="row g-3" id="find-id-result-area" style="display: none">
-                <div class="col-12">
-                    <p>
-                        고객님의 계정을 찾았습니다.
-                    </p>
-                    <span>아이디 확인 후 로그인해 주세요.</span>
-                    <h3 id="find-id"></h3>
-                </div>
-                <div class="col">
-                    <a type="button" class="w-100 btn btn-success" href="/member/find/password">비밀번호 찾기</a>
-                </div>
-                <div class="col">
-                    <a type="button" class="w-100 btn btn-success" href="/login">로그인 하러가기</a>
-                </div>
-            </div>
 
-        </form>
+            </form>
+        </div>
     </div>
 </div>
-
-
-<div th:replace="~{/fragments/footer :: footer}"></div>
 <script src="/js/member.js"></script>
 </body>
 </html>
