--- a/delivery-market/src/main/resources/templates/member/mail.html
+++ b/delivery-market/src/main/resources/templates/member/mail.html
@@ -3,13 +3,12 @@
 <div th:replace="~{/fragments/header :: header}"></div>
 <body>
 
-<div class="container">
+<div class="content-area">
     아래 코드를 회원가입 창에 입력해주세요.
     <br>
     <div style="font-size:130%" th:text="${code}"></div>
 
 </div>
 
-<div th:replace="~{/fragments/footer :: footer}"></div>
 </body>
 </html>
