docs: 프론트 레이아웃 수정

--- a/delivery-market/src/main/resources/templates/fragments/navbars.html
+++ b/delivery-market/src/main/resources/templates/fragments/navbars.html
@@ -8,7 +8,7 @@
 
 
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
-            <div class="col-md-3 mb-2 mb-md-0">
+            <div class="col-md-3 mb-2">
                 <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
                     <img width="auto" height="50" src="/img/clean-logo-and-company.png">
                 </a>
