--- a/delivery-market/src/main/resources/static/css/basic.css
+++ b/delivery-market/src/main/resources/static/css/basic.css
@@ -36,6 +36,17 @@
     height: 50px;
 }
 
+.sidebar-area {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    background-color: white;
+    width: 250px;
+    margin: 80px 10px 10px;
+}
+
 
 .right-fixed-area {
     position: fixed;
@@ -66,4 +77,9 @@
     margin-bottom: 20px;
     margin-left: 20px;
     margin-right: 20px;
+}
+
+.my-page-content-area {
+    margin: 90px 20px 20px 280px;
+    padding: 20px 10px 10px;
 }
