feat: 카테고리 생성 관련 controller와 프론트

--- a/delivery-market-admin/src/main/resources/templates/fragments/sidebar.html
+++ b/delivery-market-admin/src/main/resources/templates/fragments/sidebar.html
@@ -4,19 +4,18 @@
 <div th:fragment="sidebar">
     <div class="sidebar-area">
         <a href="/" class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
-            <svg class="bi pe-none me-2" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
-            <span class="fs-5 fw-semibold">Collapsible</span>
+            <img width="auto" height="24" src="/img/clean-logo.png" style="margin-right: 6px">
+            <span class="fs-5 fw-semibold">Delivery Market Admin</span>
         </a>
         <ul class="list-unstyled ps-0">
             <li class="mb-1">
                 <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
-                    Home
+                    상품
                 </button>
                 <div class="collapse show" id="home-collapse">
                     <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                        <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Overview</a></li>
-                        <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Updates</a></li>
-                        <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Reports</a></li>
+                        <li><a href="/categories" class="link-body-emphasis d-inline-flex text-decoration-none rounded">카테고리 관리</a></li>
+                        <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">상품 관리</a></li>
                     </ul>
                 </div>
             </li>
