--- a/delivery-market-admin/src/main/resources/templates/category-list.html
+++ b/delivery-market-admin/src/main/resources/templates/category-list.html
@@ -14,14 +14,12 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form action="/categories/add" method="POST" id="add-category-from">
-                        <div class="row">
-                            <div class="col-12 pb-3">
-                                <label for="name" class="form-label">이름</label>
-                                <input type="text" class="form-control" id="name" name="name" placeholder="이름을 입력해주세요.">
-                            </div>
+                    <div class="row">
+                        <div class="col-12 pb-3">
+                            <label for="name" class="form-label">이름</label>
+                            <input type="text" class="form-control" id="name" name="name" placeholder="이름을 입력해주세요.">
                         </div>
-                    </form>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" onclick="addParentCategory()">추가</button>
@@ -59,126 +57,44 @@
                 <table class="table table-striped table-sm">
                     <thead>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Header</th>
-                        <th scope="col">Header</th>
-                        <th scope="col">Header</th>
-                        <th scope="col">Header</th>
+                        <th scope="col">No</th>
+                        <th scope="col">상위 카테고리</th>
+                        <th scope="col">하위 카테고리</th>
+                        <th scope="col">생성일자</th>
+                        <th scope="col">생성자</th>
+                        <th scope="col">수정일자</th>
+                        <th scope="col">수정자</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>1,001</td>
-                        <td>random</td>
-                        <td>data</td>
-                        <td>placeholder</td>
-                        <td>text</td>
-                    </tr>
-                    <tr>
-                        <td>1,002</td>
-                        <td>placeholder</td>
-                        <td>irrelevant</td>
-                        <td>visual</td>
-                        <td>layout</td>
-                    </tr>
-                    <tr>
-                        <td>1,003</td>
-                        <td>data</td>
-                        <td>rich</td>
-                        <td>dashboard</td>
-                        <td>tabular</td>
-                    </tr>
-                    <tr>
-                        <td>1,003</td>
-                        <td>information</td>
-                        <td>placeholder</td>
-                        <td>illustrative</td>
-                        <td>data</td>
-                    </tr>
-                    <tr>
-                        <td>1,004</td>
-                        <td>text</td>
-                        <td>random</td>
-                        <td>layout</td>
-                        <td>dashboard</td>
-                    </tr>
-                    <tr>
-                        <td>1,005</td>
-                        <td>dashboard</td>
-                        <td>irrelevant</td>
-                        <td>text</td>
-                        <td>placeholder</td>
-                    </tr>
-                    <tr>
-                        <td>1,006</td>
-                        <td>dashboard</td>
-                        <td>illustrative</td>
-                        <td>rich</td>
-                        <td>data</td>
-                    </tr>
-                    <tr>
-                        <td>1,007</td>
-                        <td>placeholder</td>
-                        <td>tabular</td>
-                        <td>information</td>
-                        <td>irrelevant</td>
-                    </tr>
-                    <tr>
-                        <td>1,008</td>
-                        <td>random</td>
-                        <td>data</td>
-                        <td>placeholder</td>
-                        <td>text</td>
-                    </tr>
-                    <tr>
-                        <td>1,009</td>
-                        <td>placeholder</td>
-                        <td>irrelevant</td>
-                        <td>visual</td>
-                        <td>layout</td>
-                    </tr>
-                    <tr>
-                        <td>1,010</td>
-                        <td>data</td>
-                        <td>rich</td>
-                        <td>dashboard</td>
-                        <td>tabular</td>
-                    </tr>
-                    <tr>
-                        <td>1,011</td>
-                        <td>information</td>
-                        <td>placeholder</td>
-                        <td>illustrative</td>
-                        <td>data</td>
-                    </tr>
-                    <tr>
-                        <td>1,012</td>
-                        <td>text</td>
-                        <td>placeholder</td>
-                        <td>layout</td>
-                        <td>dashboard</td>
-                    </tr>
-                    <tr>
-                        <td>1,013</td>
-                        <td>dashboard</td>
-                        <td>irrelevant</td>
-                        <td>text</td>
-                        <td>visual</td>
-                    </tr>
-                    <tr>
-                        <td>1,014</td>
-                        <td>dashboard</td>
-                        <td>illustrative</td>
-                        <td>rich</td>
-                        <td>data</td>
-                    </tr>
-                    <tr>
-                        <td>1,015</td>
-                        <td>random</td>
-                        <td>tabular</td>
-                        <td>information</td>
-                        <td>text</td>
-                    </tr>
+                    <div th:each="category : ${categories}">
+                        <tr>
+                            <td th:text="${category.id}"></td>
+                            <td th:text="${category.name}"></td>
+                            <td></td>
+                            <td th:text="${#temporals.format(category.createdAt, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                            <td th:text="${category.createdBy.name}"></td>
+                            <td th:if="${category.createdAt == category.updatedAt}"></td>
+                            <td th:unless="${category.createdAt == category.updatedAt}" th:text="${#temporals.format(category.updatedAt, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                            <td th:unless="${category.createdBy == category.createdBy}" th:text="${category.updatedBy.name}"></td>
+                            <td th:if="${category.createdBy == category.createdBy}"></td>
+
+
+                        </tr>
+                        <div th:unless="${category.childCategories.isEmpty()}">
+                            <tr th:each="childCategory : ${category.childCategories}">
+                                <td th:text="${childCategory.id}"></td>
+                                <td></td>
+                                <td th:text="${childCategory.name}"></td>
+                                <td th:text="${#temporals.format(childCategory.createdAt, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                                <td th:text="${childCategory.createdBy.name}"></td>
+                                <td th:if="${childCategory.createdAt == childCategory.updatedAt}"></td>
+                                <td th:unless="${childCategory.createdAt == childCategory.updatedAt}" th:text="${#temporals.format(childCategory.updatedAt, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                                <td th:unless="${childCategory.createdBy == childCategory.createdBy}" th:text="${childCategory.createdBy.name}"></td>
+                                <td th:if="${childCategory.createdBy == childCategory.createdBy}"></td>
+                            </tr>
+                        </div>
+                    </div>
                     </tbody>
                 </table>
             </div>
