--- a/delivery-market-admin/src/main/resources/templates/category-list.html
+++ b/delivery-market-admin/src/main/resources/templates/category-list.html
@@ -22,7 +22,7 @@
                         <div class="col-12 pb-3">
                             <label for="parent-list" class="form-label">상위 카테고리</label>
                             <select class="form-select form-select" name="parentId" id="parent-list">
-                                <option value="">---상위 카테고리---</option>
+                                <option value="">---선택 안 함---</option>
                             </select>
                         </div>
                     </div>
