--- a/delivery-market-admin/src/main/resources/templates/category-list.html
+++ b/delivery-market-admin/src/main/resources/templates/category-list.html
@@ -19,17 +19,25 @@
                             <label for="name" class="form-label">새 카테고리 이름</label>
                             <input type="text" class="form-control" id="name" name="name" placeholder="이름을 입력해주세요.">
                         </div>
+                        <div class="col-12 pb-1">
+                            <label class="form-label">하위 카테고리 리스트</label>
+                            <div class="row">
+                                <div class="col-10 pb-3">
+                                    <input type="text" class="form-control" name="childCategory" placeholder="이름을 입력해주세요.">
+                                </div>
+                                <div class="col-2 pb-3">
+                                    <button type="button" class="btn btn-outline-danger  w-100">삭제</button>
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-12 pb-3">
-                            <label for="parent-list" class="form-label">상위 카테고리</label>
-                            <select class="form-select form-select" name="parentId" id="parent-list">
-                                <option value="">---선택 안 함---</option>
-                            </select>
+                            <button type="button" class="btn btn-outline-success btn-sm w-100">하위 카테고리 추가</button>
                         </div>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="add-category-btn">추가</button>
-                    <button type="button" class="btn btn-secondary" id="modal-close-btn1" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-outline-success" id="add-category-btn">추가</button>
+                    <button type="button" class="btn btn-outline-secondary" id="modal-close-btn1" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
