--- a/delivery-market-admin/src/main/resources/templates/goods/category-edit.html
+++ b/delivery-market-admin/src/main/resources/templates/goods/category-edit.html
@@ -9,41 +9,44 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item">
-                        <p class="fs-5 fw-bold mb-0">카테고리 추가</p>
+                        <p class="fs-5 fw-bold mb-0">카테고리 수정</p>
                     </li>
                 </ol>
             </nav>
         </div>
         <div class="col-6 offset-3" style="margin-top: 100px">
-            <form method="POST" id="add-category-form">
+            <form method="POST" id="edit-category-form">
                 <div class="row">
                     <div class="col-12 pb-3">
+                        <input hidden="hidden" id="categoryId" th:value="${category.id}"/>
                         <label for="name" class="form-label">상위 카테고리 이름</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="이름을 입력해주세요.">
+                        <input type="text" class="form-control" id="name" name="name" th:value="${category.name}" placeholder="이름을 입력해주세요.">
                     </div>
-                    <div class="col-12 pb-1 mt-5" id="add-child-category-list">
+                    <div class="col-12 pb-1 mt-5" id="edit-child-category-list">
                         <div class="row mb-3">
                             <div class="col-6">
                                 <label class="form-label">하위 카테고리 리스트</label>
                             </div>
                             <div class="col-6 d-flex flex-row-reverse">
-                                <button type="button" class="btn btn-outline-success btn-sm" id="add-child-category">하위 카테고리 추가</button>
-
+                                <button type="button" class="btn btn-outline-success btn-sm" id="add-child-category-in-edit">하위 카테고리 추가</button>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-10 pb-3">
-                                <input type="text" class="form-control" name="childName" placeholder="이름을 입력해주세요.">
-                            </div>
-                            <div class="col-2 pb-3">
-                                <button type="button" class="btn btn-outline-danger w-100">삭제</button>
+                        <div th:each="child : ${childCategories}">
+                            <div class="row">
+                                <div class="col-10 pb-3">
+                                    <input hidden name="childIds" th:value="${child.id}" class="form-control"/>
+                                    <input type="text" class="form-control" name="childName" th:value="${child.name}" placeholder="이름을 입력해주세요.">
+                                </div>
+                                <div class="col-2 pb-3">
+                                    <button th:id="${'del-category-'+child.id}" type="button" class="btn btn-outline-danger w-100">삭제</button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </form>
             <div class="d-flex justify-content-center mt-5">
-                <button type="button" class="btn btn-outline-success" id="add-category-btn">추가</button>
+                <button type="button" class="btn btn-outline-success" id="edit-category-btn">저장</button>
                 <a type="button" class="btn btn-outline-secondary ms-3" href="/categories">취소</a>
             </div>
 
