--- a/delivery-market-admin/src/main/resources/templates/fragments/sidebar.html
+++ b/delivery-market-admin/src/main/resources/templates/fragments/sidebar.html
@@ -16,7 +16,7 @@
                     <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                         <li><a href="/categories" class="link-body-emphasis d-inline-flex text-decoration-none rounded">카테고리 리스트</a></li>
                         <li><a href="/categories/add" class="link-body-emphasis d-inline-flex text-decoration-none rounded">카테고리 추가</a></li>
-                        <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">상품 관리</a></li>
+                        <li><a href="/goods" class="link-body-emphasis d-inline-flex text-decoration-none rounded">상품 관리</a></li>
                     </ul>
                 </div>
             </li>
