feat: 상품 추가 페이지 기본 정보 영역 구현
- 상위 카테고리 선택 시 하위 카테고리 조회 API 실행

--- a/delivery-market-admin/src/main/resources/templates/goods/goods-list.html
+++ b/delivery-market-admin/src/main/resources/templates/goods/goods-list.html
@@ -14,13 +14,10 @@
                 </ol>
             </nav>
         </div>
-        <div class="col-3 mb-3">
-            필터 영역
-        </div>
-        <div class="col-3 mb-3 offset-6">
+        <div class="col-2 mb-3 offset-10">
             <div class="row">
-                <div class="col-4 p-1">
-                    <a type="button" class="btn btn-outline-success btn-sm w-100" href="/categories/add">
+                <div class="col-6 p-1">
+                    <a type="button" class="btn btn-outline-success btn-sm w-100" href="/goods/add">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
                             <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"></path>
                             <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"></path>
@@ -28,16 +25,7 @@
                         추가
                     </a>
                 </div>
-                <div class="col-4 p-1">
-                    <button type="button" class="btn btn-outline-warning btn-sm w-100" data-bs-toggle="modal" data-bs-target="#edit-category-modal">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-                            <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                            <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
-                        </svg>
-                        수정
-                    </button>
-                </div>
-                <div class="col-4 p-1">
+                <div class="col-6 p-1">
                     <button type="button" class="btn btn-outline-danger btn-sm w-100" onclick="delCategory()">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-square" viewBox="0 0 16 16">
                             <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
@@ -98,4 +86,4 @@
 </body>
 </html>
 
-<script src="/js/category-list.js"></script>
+<script src="/js/goods.js"></script>
