feat: (FE) 상품 추가 페이지에서 옵션 삭제 버튼 구현

--- a/delivery-market-admin/src/main/resources/templates/goods/goods-add.html
+++ b/delivery-market-admin/src/main/resources/templates/goods/goods-add.html
@@ -192,7 +192,7 @@
                                             </div>
                                         </div>
                                         <div class="col-2 pb-3 offset-10">
-                                            <a type="button" class="btn w-100 btn-outline-danger btn-sm" id="delOption">옵션 삭제</a>
+                                            <a type="button" class="btn w-100 btn-outline-danger btn-sm delOption" hidden="hidden">옵션 삭제</a>
                                         </div>
                                     </div>
                                 </div>
