feat: 상품 등록 유효성 체크 추가

--- a/delivery-market-admin/src/main/resources/templates/goods/goods-list.html
+++ b/delivery-market-admin/src/main/resources/templates/goods/goods-list.html
@@ -74,8 +74,8 @@
                             <td th:text="${good.createdBy}"></td>
                             <td th:if="${good.createdAt == good.updatedAt}"></td>
                             <td th:if="${good.createdAt != good.updatedAt}" th:text="${#temporals.format(good.updatedAt, 'yyyy-MM-dd HH:mm:ss')}"></td>
-                            <td th:if="${good.createdBy == good.updatedBy}"></td>
-                            <td th:if="${good.createdBy != good.updatedBy}" th:text="${good.updatedBy}"></td>
+                            <td th:if="${good.createdAt == good.updatedAt}"></td>
+                            <td th:if="${good.createdAt != good.updatedAt}" th:text="${good.updatedBy}"></td>
                         </tr>
                     </tbody>
                 </table>
